@@ -1155,3 +1155,18 @@ function showModalWindow(title, text, buttons) {
 			}
 		});
 }
+
+/**
+ * Disable setup step button
+ *
+ * @param buttonId
+ */
+function disableSetupStepButton(buttonId) {
+	jQuery(buttonId).
+		addClass('ui-state-disabled').
+		addClass('ui-button-disabled').
+		attr('disabled', 'disabled').
+		attr('aria-disabled', 'true');
+
+	jQuery('.info_bar .ok').remove();
+}
